# Hotel_booking

./: .gitignore  README.md
backend/: .env.example  chat_server.py  edge_tts_plugin.py  pyproject.toml  reservations_server.py  rooms_server.py  start.py  token_server.py  voice_agent_module.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/data/: menu.ts  rooms.ts
frontend/src/lib/: useCart.ts  useChat.ts  useSofia.ts
